fixed the carousel text overlapping image in mobile

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -181,6 +181,9 @@
     .carousel__nav{
         grid-template-columns: 1fr;
     }
+    .carousel__item{
+        grid-template-rows: 1fr 3fr;
+    }
     /* .slide__text .text{
         font-size: 1rem;
     } */
